ol style to lower greek, class to serving

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li>Early Wonder</li>
     </ol>
     <h2>Nutritional information</h2>
-    <p>Serving Size: <data value="100">100</data> g</p>
+    <p class="serving">Serving Size: <data value="100">100</data> g</p>
     <dl>
       <dt>Energy:</dt>
       <dd><data value="180">180</data> kJ</dd>
